# podrez

./: Cargo.toml  README.md  build.rs  config
.github/workflows/: release.yml
src/: downloader.rs  main.rs  sound.rs
