[package]
name = "podrez"
version = "0.1.0"
edition = "2021"
authors = ["human9000 human9000.2021@gmail.com"]
license-file = "LICENSE"

[dependencies]
ctrlc = "3.4.5"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ureq = "2.10.1"

#async
futures = "0.3.31"
smol = "2.0.2"
smol-potat = "1.1.2"
anyhow = "1.0.91"

[dependencies.awedio]
version = "0.4.1"
default-features = false
features = ["cpal", "symphonia-mp3", "symphonia-wav"]

[profile.dev]
panic = "unwind"
incremental = true

[profile.release]
lto = true
opt-level = "z"
debug = 0
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = "z"
strip = true
